# quantfolio

./: .gitignore  LICENSE  PortfolioDownload.csv  README.md  news.py  portfolio.py  positions_converted.csv  positions_sample.csv  pyproject.toml  requirements.txt
deploy/: com.quantfolio.watch.plist  crontab.example
quantfolio/: __init__.py  __main__.py  pricing.py  store.py
quantfolio/cli/: __init__.py  brief.py  import_cmd.py  journal.py  show.py  themes_cmd.py  watch.py
quantfolio/notify/: __init__.py  desktop.py  push.py  terminal.py
quantfolio/signals/: __init__.py  novelty.py  pipeline.py  score.py  synthesize.py  thematic.py  themes.yaml  weights.yaml
quantfolio/sources/: __init__.py  _common.py  google_rss.py  yahoo.py
tests/: test_novelty.py  test_score.py
tests/fixtures/: headlines.json
